--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,4 @@ inventory = ./environments/
 gather_facts = False
 roles_path = roles
 deprecation_warnings=False
+pbrun_exe = '/local/apps/bin/pbrun'
