--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,4 +3,6 @@ inventory = ./environments/
 gather_facts = False
 roles_path = roles
 deprecation_warnings=False
+
+[privilege_escalation]
 pbrun_exe = /local/apps/bin/pbrun
