--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,4 +5,4 @@ roles_path = roles
 deprecation_warnings=False
 
 [privilege_escalation]
-pbrun_exe = /local/apps/bin/pbrun
+become_exe = /local/apps/bin/pbrun
