--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,4 +6,4 @@ deprecation_warnings=False
 
 [privilege_escalation]
 become_exe = /local/apps/bin/pbrun
-become_flags: '-s /local/apps/bin/bash'
+become_flags = '-s /local/apps/bin/bash'
