--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,7 +5,7 @@ roles_path = roles
 deprecation_warnings=False
 
 [privilege_escalation]
-#become_exe = /local/apps/bin/pbrun
+become_exe = /local/apps/bin/pbrun
 #become_flags = '-s /local/apps/bin/bash'
 
 [ssh_connection]
