--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,5 +8,5 @@ deprecation_warnings=False
 become_exe = /local/apps/bin/pbrun
 #become_flags = '-s /local/apps/bin/bash'
 
-[ssh_connection]
-pipelining=True
+#[ssh_connection]
+#pipelining=True
