--- a/common.yml
+++ b/common.yml
@@ -1,6 +1,6 @@
 ---
 # file: bash.yml
-- hosts: groups.name:webserver-ansar
+- hosts: webserver-ansar
   #remote_user: imsqadps
   #become: true
   roles:
